k8s/prod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sancus-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: sancus
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sancus
    spec:
      containers:
        - name: sancus
          image: # replace your image url
          imagePullPolicy: Always
          ports:
            - containerPort: 3000 # Changed from 80 to 3000 to match your Express app's port
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
