k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sancus
  namespace: sancus
spec:
  type: ClusterIP
  selector: { app.kubernetes.io/name: sancus }
  ports:
    - name: http
      port: 80
      targetPort: http
