k8s/prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: # your-prod-namespace
  name: # your-prod-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: # Update this to your actual production domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sancus-service
                port:
                  number: 80
