k8s/stage-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: # Namespace for staging
  name: # ingress for staging
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'

spec:
  ingressClassName: alb
  rules:
    - host: # Update this to your actual staging domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sancus-service
                port:
                  number: 80
